# opencc-rust

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs
.github/workflows/: ci-version.yml  ci.yml
opencc/: JPVariants.ocd2  JPVariantsRev.ocd2  STPhrases.ocd2  TWPhrases.ocd2
src/: lib.rs
tests/: opencc.rs  static_dictionaries.rs
