[package]
name = "opencc-rust"
version = "1.0.9"
authors = ["Magic Len <len@magiclen.org>"]
repository = "https://github.com/magiclen/opencc-rust"
homepage = "https://magiclen.org/opencc-rust"
keywords = ["chinese", "opencc", "traditional", "simple"]
categories = ["external-ffi-bindings", "localization"]
description= "Open Chinese Convert(OpenCC, 開放中文轉換) binding for the Rust language for conversion between Traditional Chinese and Simplified Chinese."
readme = "README.md"
license = "Apache-2.0"

[badges]
travis-ci = { repository = "magiclen/opencc-rust", branch = "master" }
appveyor = { repository = "magiclen/opencc-rust", branch = "master", service = "github" }

[dependencies]
libc = "0.2.43"
lazy-static-include = { version = "2", optional = true }
lazy_static = { version = "1.1", optional = true }


[build-dependencies]
pkg-config = "0.3.14"

[features]
static-dictionaries = ["lazy-static-include", "lazy_static"]

[package.metadata.docs.rs]
all-features = true